# mungeFCC

./: .clang-format  .gitignore  CMakeLists.txt  README.md  affiliate.hash  fccdata.txt  getFCCdata.sh  linkResults.sh  localStationName.hash  mungeFCC.c  mungeFCC.h  nielsenDMA.hash  usstate.hash
